[project]
name = "rl-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "gymnasium[toy-text]==1.0.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
