[project]
name = "rl-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py>=0.11.0",
    "bitsandbytes>=0.45.5",
    "graphviz>=0.20.3",
    "gymnasium[toy-text]==1.0.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "notebook>=7.4.2",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
